--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ greenlet==0.4.12
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+numpy
 python-engineio==1.7.0
 python-socketio==1.8.1
+pyaudio
 six==1.11.0
 Werkzeug==0.12.2
